<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/itemThumb"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/image_for_meal"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_image_drink_placeholder" />

        <View
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <ImageView
            android:id="@+id/favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/favourite_the_meal"
            android:focusable="true"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_favorite_border_black_24dp"
            tools:ignore="NewApi" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemThumb"
            android:layout_margin="10dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/item_categories"
            android:textColor="@color/colorPrimaryDarkest"
            android:textSize="16sp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>